exports[`test render empty 1`] = `
<div
  className="search-container">
  <div
    className="search">
    <input
      onChange={undefined}
      placeholder="搜索"
      value="" />
    <button
      className="btn clear-btn hidden"
      onClick={[Function]}>
      <i
        className="mi mi-Clear" />
    </button>
  </div>
</div>
`;

exports[`test render normal 1`] = `
<div
  className="search-container">
  <div
    className="search">
    <input
      onChange={undefined}
      placeholder="搜索"
      value="hello" />
    <button
      className="btn clear-btn "
      onClick={[Function]}>
      <i
        className="mi mi-Clear" />
    </button>
  </div>
</div>
`;
